<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Current Films</string>
    <string name="app_recommended">Recommended</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_add_film">Add Film</string>
    <string name="add_films">You should add a film</string>
    <string name="title_films">Title</string>
    <string name="year_films">Year</string>
    <string name="header_films">List Films</string>
    <string name="go_to_trailer">Go to trailer</string>
    <string name="delete">Delete</string>
    <string name="image_films">Esta es una imagen descriptiva de la pelicula</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="share">Share</string>
    <string name="language">Change language</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add film</string>
    <string name="add_fill_title">Title:</string>
    <string name="add_fill_year">Year:</string>
    <string name="add_fill_url_trailer">URL trailer:</string>
    <string name="add_fill_description">Description:</string>
    <string name="add_fill_accept">Accept:</string>
    <string name="add_fill_title_empty">Check the title inputted</string>
    <string name="add_fill_year_empty">Check the year inputted</string>
    <string name="add_fill_url_empty">Check the url inputted</string>
    <string name="add_fill_description_empty">Check the description inputted</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_film">Detail Film</string>
    <string name="title_activity_box">Box</string>

</resources>
