<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/image_films"
        android:src="@drawable/image" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_title_film"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_films"
            android:textSize="@dimen/list_text_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_year_film"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/year_films"
            android:textSize="@dimen/list_text_year" />

    </LinearLayout>

</LinearLayout>